# btc-wallet

./: .gitignore  README.md  demo.md  features.md  pyproject.toml  start.py
btc-wallet/: LICENSE.txt  README.md  features.md  pyproject.toml  test.txt
btc-wallet/btc_wallet/: __about__.py  contact.py  contact_mgr.py  gen_new_wallet.py  home.py  menus.py  mng_contact.py  mng_wallet.py  recovery.py  send_tx.py  util.py  wallet_mgr.py
btc-wallet/tests/: __init__.py
btc_wallet/: __init__.py  address_lookup.py  application_context.py  blockchain_client.py  config.py  contact.py  contact_mgr.py  encrypt.py  menus.py  node_service.py  price_service.py  transaction.py  tx_mgr.py  tx_service.py  user_service.py  user_settings.py  util.py  validate.py  wallet_mgr.py
btc_wallet/menus/: contacts.py  generic.py  main.py  send_transactions.py  settings.py  view_transactions.py  wallet.py
btc_wallet/test_pkg/: __init__.py  test_addr_validation.py  test_contact_mgr.py  test_encrypt.py  test_user_service.py  test_user_settings.py  test_util.py  test_wallet_mgr.py
btc_wallet/tests/: contact_mgr_test.py
scripts/: generate_contacts.py  setup_env_vars.sh
