[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btc-wallet"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Andrew Crenwelge", email = "andrewcrenwelge@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "bit>=0.8.0",
  "mnemonic>=0.20",
  "qrcode>=7.3",
  "blessings>=1.7",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/btc-wallet#readme"
Issues = "https://github.com/unknown/btc-wallet/issues"
Source = "https://github.com/unknown/btc-wallet"

[tool.hatch.version]
path = "btc_wallet/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=btc_wallet --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "btc_wallet/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
